--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>경선식 중학 단어 학습 및 오답 노트 (Lecture 17 & 18)</title>
+    <title>시우의 개인 서버.1</title>
     <style>
         /* 기본 스타일 */
         body {
@@ -167,50 +167,50 @@
     <script>
         // Lecture 17 & 18 단어 목록 (요청에 따라 업데이트)
         const wordList = [
-// 경선식 중학 Lecture 23
-{english: "frightful", korean: "무서운, 소름끼치는"},
-{english: "safe", korean: "안전한"},
-{english: "save", korean: "구하다, 아끼다"},
-{english: "public", korean: "대중, 공공의"},
-{english: "treat", korean: "대접하다"},
-{english: "load", korean: "짐, 태우다"},
-{english: "pardon", korean: "용서하다"},
-{english: "however", korean: "그러나"},
-{english: "journal", korean: "신문, 잡지"},
-{english: "turtle", korean: "거북이"},
-{english: "toward", korean: "~쪽으로"},
-{english: "examination", korean: "시험, 검사"},
-{english: "example", korean: "예, 보기"},
-{english: "survive", korean: "생존하다, 살아남다"},
-{english: "shuttle", korean: "왕복하다, 왕복 운행"},
-{english: "heel", korean: "뒤꿈치"},
-{english: "port", korean: "항구"},
-{english: "import", korean: "수입하다, 수입"},
-{english: "export", korean: "수출하다, 수출"},
-{english: "passport", korean: "여권"},
-{english: "airport", korean: "공항"},
-// 추가 단어 목록 2
-{english: "common", korean: "공통의, 일반의, 흔한"},
-{english: "mobile", korean: "움직이기 쉬운"},
-{english: "automobile", korean: "자동차"},
-{english: "draw", korean: "끌다, 당기다"},
-{english: "job", korean: "일, 직무, 직업"},
-{english: "rest", korean: "휴식"},
-{english: "ahead", korean: "앞으로, 앞에"},
-{english: "hire", korean: "고용하다"},
-{english: "some", korean: "어떤, 약간의"},
-{english: "something", korean: "어떤 것"},
-{english: "some time", korean: "언젠가"},
-{english: "sometimes", korean: "때때로"},
-{english: "somewhere", korean: "어딘가에"},
-{english: "someone", korean: "누군가, 어떤 사람"},
-{english: "any", korean: "어떤, 어느"},
-{english: "anything", korean: "어떤 것"},
-{english: "anytime", korean: "언제든지"},
-{english: "anybody", korean: "누군가"},
-{english: "anyway", korean: "어쨌든"},
-{english: "anymore", korean: "더 이상 ~않다"},
-{english: "anywhere", korean: "어디에도"},
+// 경선식 중학 Lecture 31
+{english: "build", korean: "세우다"}, //
+{english: "lead", korean: "이끌다"}, //
+{english: "dive", korean: "잠수하다"}, //
+{english: "ride", korean: "타고가다"}, //
+{english: "single", korean: "독신의, 단 하나의"}, //
+{english: "light", korean: "가벼운, 빛"}, //
+{english: "middle", korean: "중간의"}, //
+{english: "mix", korean: "혼합하다, 섞다"}, //
+{english: "stretch", korean: "늘이다"}, //
+{english: "pay", korean: "지불하다"}, //
+{english: "class", korean: "학급, 반, 수업"}, //
+{english: "lesson", korean: "수업"}, //
+{english: "hill", korean: "언덕"}, //
+{english: "birth", korean: "출생"}, //
+{english: "meat", korean: "고기"}, //
+{english: "roll", korean: "구르다, 회전하다"}, //
+{english: "quick", korean: "빠른"}, //
+{english: "sand", korean: "모래"}, //
+{english: "fantastic", korean: "환상적인, 이상한"}, //
+{english: "cube", korean: "입방체"}, //
+{english: "fin", korean: "지느러미"}, //
+// 경선식 중학 Lecture 32
+{english: "tie", korean: "묶다, 묶는 끈"}, //
+{english: "merry", korean: "즐거운, 명랑한"}, //
+{english: "heat", korean: "열, 더위, 가열하다"}, //
+{english: "shut", korean: "닫다"}, //
+{english: "castle", korean: "성"}, //
+{english: "rank", korean: "계급, 등급"}, //
+{english: "perfect", korean: "완전한, 완벽한"}, //
+{english: "knock", korean: "치다, 두드리다"}, //
+{english: "boil", korean: "끓이다"}, //
+{english: "rent", korean: "빌려주다"}, //
+{english: "self", korean: "자기, 자신"}, //
+{english: "scene", korean: "장면"}, //
+{english: "map", korean: "지도"}, //
+{english: "pack", korean: "꾸러미, 짐을 싸다"}, //
+{english: "flash", korean: "번쩍하다, 섬광"}, //
+{english: "weight", korean: "무게 중량"}, //
+{english: "cash", korean: "현금"}, //
+{english: "magazine", korean: "잡지"}, //
+{english: "palace", korean: "성, 궁전"}, //
+{english: "credit", korean: "신용, 외상"}, //
+{english: "fair", korean: "공평한"}, //
             ];
         let shuffledWords = [];
         let currentWordIndex = 0;
