--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 {english: "map", korean: "지도"}, //
 {english: "pack", korean: "꾸러미, 짐을 싸다"}, //
 {english: "flash", korean: "번쩍하다, 섬광"}, //
-{english: "weight", korean: "무게 중량"}, //
+{english: "weight", korean: "무게,중량"}, //
 {english: "cash", korean: "현금"}, //
 {english: "magazine", korean: "잡지"}, //
 {english: "palace", korean: "성, 궁전"}, //
