--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
         // Lecture 17 & 18 단어 목록 (요청에 따라 업데이트)
         const wordList = [
 // 전치사 및 단어 목록
-{english: "at", korean: "~에서(작은 지점)"},
-{english: "in", korean: "~안에(내부)"},
-{english: "on", korean: "~위에(표면에 붙어)"},
+{english: "at", korean: "~에서,작은 지점"},
+{english: "in", korean: "~안에,내부"},
+{english: "on", korean: "~위에,표면에 붙어,"},
 {english: "up", korean: "위로, 위에"},
 {english: "out", korean: "~밖에"},
 {english: "out of", korean: "~의 안에서 밖으로"},
