--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 {english: "on", korean: "~위에,표면에 붙어,"},
 {english: "up", korean: "위로, 위에"},
 {english: "out", korean: "~밖에"},
-{english: "out of", korean: "~의 안에서 밖으로"},
-{english: "into", korean: "~의 밖에서 안으로"},
+{english: "out of", korean: "~의 안에서 ,밖으로"},
+{english: "into", korean: "~의 밖에서, 안으로"},
 {english: "over", korean: "~위에"},
 {english: "under", korean: "~의 아래에"},
 {english: "above", korean: "~위쪽에"},
